[package]
name = "emacs-launcher"
version = "0.1.0"
authors = ["David Caldwell <david@porkrind.org>"]
edition = "2021"

[[bin]]
path = "launch.rs"
name = "launch"

[dependencies]
version-compare = "0.1"
glob = "0.3.0"
regex = "1"
cocoa = "0.24.0"
objc = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
